# Wizzpert-agents

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  rebrand.ps1  update_markdown_logo.py
.github/: update_versions.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/next-release/: changeset-0c32e47c.md  changeset-12012403.md  changeset-1b94935f.md  changeset-1ce8eb28.md  changeset-24f8a4cb.md  changeset-2ad81615.md  changeset-2dbbc82b.md  changeset-354c197a.md  changeset-3cd7dcd2.md  changeset-3ec7cd3d.md  changeset-440b34fa.md  changeset-468778aa.md  changeset-4ae759b0.md  changeset-4c7519f9.md  changeset-4d5b12d5.md  changeset-4ffe605b.md  changeset-51b7bc26.md  changeset-5ca20d29.md  changeset-5e7650bc.md  changeset-613ef3d7.md  changeset-63a32de3.md  changeset-70b208e6.md  changeset-71552278.md  changeset-736911c0.md  changeset-785aff77.md  changeset-7a78205f.md  changeset-816269c8.md  changeset-82e6bd54.md  changeset-87db8afc.md  changeset-8bff0e57.md  changeset-9bd9e220.md  changeset-9c0bf467.md  changeset-9e54028d.md  changeset-a19302fd.md  changeset-a1f0d782.md  changeset-a264bde2.md  changeset-a6c0fcd6.md  changeset-aab35406.md  changeset-ad9e5c3a.md  changeset-b1fb1404.md  (+21 more)
.github/workflows/: changesets.yml  publish-docs.yml  tests.yml
.github/workflows-py/: check_changesets.py
examples/: .env.example  minimal_worker.py
examples/avatar_agents/: README.md
examples/other/: chat-stream-receiver.py  kokoro_tts.py  text_only.py
examples/primitives/: e2ee.py  echo-agent.py  participant_entrypoint.py  room_stats.py  video-publisher.py
examples/voice_agents/: annotated_tool_args.py  background_audio.py  basic_agent.py  dynamic_tool_creation.py  error_callback.py  fast-preresponse.py  gemini_video_agent.py  multi_agent.py  push_to_talk.py  raw_function_description.py  realtime_load_chat_history.py  realtime_turn_detector.py  requirements.txt  restaurant_agent.py  silent_function_call.py  speedup_output_audio.py  structured_output.py  toggle_io.py  (+2 more)
tests/: .gitignore  Dockerfile.tests  change-sophie.opus  conftest.py  docker-compose.yml  fake_stt.py  fake_tts.py  test_aio.py  test_audio_decoder.py  test_chat_ctx.py  test_config.py  test_connection_pool.py  test_ipc.py  test_llm.py  test_schema_gemini.py  test_stt.py  test_stt_fallback.py  test_tokenizer.py  test_tts.py  test_tts_fallback.py  test_vad.py  utils.py
wizzpert-agents/: README.md  pyproject.toml
wizzpert-agents/wizzpert/agents/: __init__.py  job.py  jupyter.py  log.py  vad.py  worker.py
wizzpert-agents/wizzpert/agents/cli/: _run.py  cli.py  log.py  proto.py  watcher.py
wizzpert-agents/wizzpert/agents/debug/: index.html  tracing.py
wizzpert-agents/wizzpert/agents/ipc/: job_proc_lazy_main.py  mock_room.py  proto.py
wizzpert-agents/wizzpert/agents/llm/: chat_context.py  llm.py  mcp.py  realtime.py  tool_context.py  utils.py
wizzpert-agents/wizzpert/agents/stt/: fallback_adapter.py  stt.py
wizzpert-agents/wizzpert/agents/tokenize/: _basic_hyphenator.py
wizzpert-agents/wizzpert/agents/tts/: fallback_adapter.py  tts.py
wizzpert-agents/wizzpert/agents/utils/: __init__.py  audio.py  participant.py
wizzpert-agents/wizzpert/agents/utils/codecs/: __init__.py  decoder.py
wizzpert-agents/wizzpert/agents/utils/images/: __init__.py  image.py
wizzpert-agents/wizzpert/agents/voice/: agent.py  agent_activity.py  agent_session.py  audio_recognition.py  background_audio.py  chat_cli.py  generation.py  io.py
wizzpert-agents/wizzpert/agents/voice/avatar/: _datastream_io.py  _queue_io.py  _runner.py  _types.py
wizzpert-agents/wizzpert/agents/voice/room_io/: _input.py  _output.py  room_io.py
wizzpert-agents/wizzpert/agents/voice/transcription/: _speaking_rate.py  _utils.py  synchronizer.py
wizzpert-plugins/wizzpert-plugins-anthropic/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-anthropic/wizzpert/plugins/anthropic/: __init__.py  llm.py  log.py  utils.py
wizzpert-plugins/wizzpert-plugins-aws/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-aws/wizzpert/plugins/aws/: __init__.py  llm.py  log.py  stt.py  tts.py  utils.py
wizzpert-plugins/wizzpert-plugins-clova/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-clova/wizzpert/plugins/clova/: __init__.py  constants.py  log.py  stt.py
wizzpert-plugins/wizzpert-plugins-gladia/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-gladia/wizzpert/plugins/gladia/: __init__.py  log.py  stt.py
wizzpert-plugins/wizzpert-plugins-hume/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-hume/wizzpert/plugins/hume/: __init__.py  log.py  tts.py
wizzpert-plugins/wizzpert-plugins-neuphonic/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-neuphonic/wizzpert/plugins/neuphonic/: __init__.py  log.py  tts.py
wizzpert-plugins/wizzpert-plugins-openai/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-openai/wizzpert/plugins/openai/: __init__.py  embeddings.py  llm.py  log.py  stt.py  tts.py  utils.py
wizzpert-plugins/wizzpert-plugins-openai/wizzpert/plugins/openai/realtime/: realtime_model.py
wizzpert-plugins/wizzpert-plugins-playai/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-playai/wizzpert/plugins/playai/: __init__.py  log.py  tts.py
wizzpert-plugins/wizzpert-plugins-rime/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-rime/wizzpert/plugins/rime/: __init__.py  log.py  tts.py
wizzpert-plugins/wizzpert-plugins-speechify/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-speechify/wizzpert/plugins/speechify/: __init__.py  log.py  models.py  tts.py
wizzpert-plugins/wizzpert-plugins-tavus/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-tavus/wizzpert/plugins/tavus/: __init__.py  api.py  avatar.py  log.py  version.py
wizzpert-plugins/wizzpert-plugins-turn-detector/: README.md  pyproject.toml
wizzpert-plugins/wizzpert-plugins-turn-detector/wizzpert/plugins/turn_detector/: __init__.py  base.py  english.py  log.py  models.py  multilingual.py
(+134 files in other folders)
