[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizzpert-agents"
dynamic = ["version"]
description = "An innovative platform for creating voice AI agents by Wizzpert"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Wizzpert", email = "hello@wizzpert.com" }]
keywords = ["webrtc", "realtime", "audio", "video", "Wizzpert", "agents", "AI"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click~=8.1",
    "wizzpert>=1.0.6,<2",
    "wizzpert-api>=1.0.2,<2",
    "wizzpert-protocol~=1.0",
    "protobuf>=3",
    "pyjwt>=2.0",
    "types-protobuf>=4,<5",
    "watchfiles>=1.0",
    "psutil>=7.0",
    "aiohttp~=3.10",
    "typing-extensions>=4.12",
    "sounddevice>=0.5",
    "docstring_parser>=0.16",
    "eval-type-backport",
    "colorama>=0.4.6",
    "av>=12.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0,<3",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.6.0, <2; python_version >= '3.10'"]
codecs = ["av>=12.0.0", "numpy>=1.26.0"]
images = ["pillow>=10.3.0"]
aws = ["wizzpert-plugins-aws>=1.0.19"]
neuphonic = ["wizzpert-plugins-neuphonic>=1.0.19"]
playai = ["wizzpert-plugins-playai>=1.0.19"]
turn-detector = ["wizzpert-plugins-turn-detector>=1.0.19"]
assemblyai = ["wizzpert-plugins-assemblyai>=1.0.19"]
rime = ["wizzpert-plugins-rime>=1.0.19"]
nltk = ["wizzpert-plugins-nltk>=1.0.19"]
anthropic = ["wizzpert-plugins-anthropic>=1.0.19"]
openai = ["wizzpert-plugins-openai>=1.0.19"]
groq = ["wizzpert-plugins-groq>=1.0.19"]
elevenlabs = ["wizzpert-plugins-elevenlabs>=1.0.19"]
azure = ["wizzpert-plugins-azure>=1.0.19"]
fal = ["wizzpert-plugins-fal>=1.0.19"]
clova = ["wizzpert-plugins-clova>=1.0.19"]
deepgram = ["wizzpert-plugins-deepgram>=1.0.19"]
silero = ["wizzpert-plugins-silero>=1.0.19"]
cartesia = ["wizzpert-plugins-cartesia>=1.0.19"]
speechmatics = ["wizzpert-plugins-speechmatics>=1.0.19"]
google = ["wizzpert-plugins-google>=1.0.19"]
gladia = ["wizzpert-plugins-gladia>=1.0.19"]
resemble = ["wizzpert-plugins-resemble>=1.0.19"]
bey = ["wizzpert-plugins-bey>=1.0.19"]
bithuman = ["wizzpert-plugins-bithuman>=1.0.19"]
speechify = ["wizzpert-plugins-speechify>=1.0.19"]
tavus = ["wizzpert-plugins-tavus>=1.0.19"]
hume = ["wizzpert-plugins-hume>=1.0.19"]


[project.urls]
Documentation = "https://docs.wizzpert.com"
Website = "https://wizzpert.com/"
Source = "https://github.com/wizzpert/agents"

[tool.hatch.version]
path = "wizzpert/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["wizzpert"]
include = ["wizzpert/agents/resources/*", "wizzpert/agents/debug/index.html"]


[tool.hatch.build.targets.sdist]
include = ["/wizzpert"]
