[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizzpert-plugins-clova"
dynamic = ["version"]
description = "wizzpert Agents Plugin for LINE Clova STT"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "wizzpert", email = "hello@wizzpert.io" }]
keywords = ["webrtc", "realtime", "audio", "video", "wizzpert"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["wizzpert-agents>=1.0.20", "pydub~=0.25.1"]

[project.urls]
Documentation = "https://docs.wizzpert.io"
Website = "https://wizzpert.io/"
Source = "https://github.com/wizzpert/agents"

[tool.hatch.version]
path = "wizzpert/plugins/clova/version.py"

[tool.hatch.build.targets.wheel]
packages = ["wizzpert"]

[tool.hatch.build.targets.sdist]
include = ["/wizzpert"]
