[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizzpert-plugins-rime"
dynamic = ["version"]
description = "wizzpert Agents Plugin for Rime"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "wizzpert", email = "hello@wizzpert.io" }]
keywords = ["webrtc", "realtime", "audio", "video", "wizzpert", "rime"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["wizzpert-agents[codecs]>=1.0.20"]

[project.urls]
Documentation = "https://docs.wizzpert.io"
Website = "https://wizzpert.io/"
Source = "https://github.com/wizzpert/agents"

[tool.hatch.version]
path = "wizzpert/plugins/rime/version.py"

[tool.hatch.build.targets.wheel]
packages = ["wizzpert"]

[tool.hatch.build.targets.sdist]
include = ["/wizzpert"]
