[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizzpert-plugins-turn-detector"
dynamic = ["version"]
description = "End of utterance detection for wizzpert Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "wizzpert", email = "hello@wizzpert.io" }]
keywords = ["webrtc", "realtime", "audio", "video", "wizzpert"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "wizzpert-agents>=1.0.20",
    "transformers>=4.47.1",
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "jinja2",
]

[project.urls]
Documentation = "https://docs.wizzpert.io"
Website = "https://wizzpert.io/"
Source = "https://github.com/wizzpert/agents"

[tool.hatch.version]
path = "wizzpert/plugins/turn_detector/version.py"

[tool.hatch.build.targets.wheel]
packages = ["wizzpert"]

[tool.hatch.build.targets.sdist]
include = ["/wizzpert"]
